Lays the foundation for the incoming EspressoLibs substitutions. This includes: - Adding projects io.jdk21 and io.jdk25 to cope with internal API changes - Adding the apporpriate ExtraJavaHomes to CI - Adding a jdk21 daily job to the CI for testing EspressoLibs on 21 - Introduces LibsMeta to conditionally load meta-data used in EspressoLibs